--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test project",
   "main": "index.js",
   "scripts": {
-    "start:dev": "parcel task_1.html"
+    "start:dev": "parcel task_FullScreen_API.html"
   },
   "author": "",
   "license": "ISC",
