Revert "task_Video added"
This reverts commit 79297c02e425d33d1643a8ebd6890a953cc0b3dc.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Test project",
   "main": "index.js",
   "scripts": {
-    "start:dev": "parcel task_FullScreen_API.html",
-    "start:video": "parcel task_Video.html ",
-    "start:localStorage": "parcel task_LocalStorage.html"
+    "start:dev": "parcel task_FullScreen_API.html"
   },
   "author": "",
   "license": "ISC",
