Revert "task_Fullscreen API, task_LocalStorage"
This reverts commit e32980b09e6bac863df6a58403324d78225d1bfa.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test project",
   "main": "index.js",
   "scripts": {
-    "start:dev": "parcel task_FullScreen_API.html"
+    "start:dev": "parcel task_1.html"
   },
   "author": "",
   "license": "ISC",
