--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Test project",
   "main": "index.js",
   "scripts": {
-    "start:task_10": "parcel task_10.html"    
-
+    "start:task_10": "parcel task_10.html"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.11.0",
     "parcel": "^2.11.0"
   }
 }
